# axonops

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  PLUGINS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
axonops_core/: __init__.py  cli.py  pyproject.toml
axonops_core/api/: app.py  server.py
axonops_core/axonops_core/: cli.py  config.py  database.py  engine.py
axonops_core/axonops_core/api/: app.py
axonops_core/engine/: engine.py  loop.py
axonops_core/memory/: store.py
axonops_sdk/: README.md  pyproject.toml
axonops_sdk/axonops_sdk/: __init__.py  base.py  models.py  registry.py
plugins/aws/: pyproject.toml
plugins/aws/axonops_plugin_aws/: __init__.py
plugins/docker/: pyproject.toml
plugins/docker/axonops_plugin_docker/: __init__.py
plugins/kubernetes/: pyproject.toml
plugins/kubernetes/axonops_plugin_kubernetes/: __init__.py
plugins/prometheus/: pyproject.toml
plugins/prometheus/axonops_plugin_prometheus/: __init__.py
plugins/psutil/: pyproject.toml
plugins/psutil/axonops_plugin_psutil/: __init__.py  action.py  collector.py  strategy.py
ui/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  index.css
ui/src/hooks/: useAxonOps.ts  useEngine.ts  useWebSocket.ts
ui/src/lib/: api.ts
