[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axonops-plugin-aws"
version = "1.0.0"
description = "AxonOps plugin — AWS CloudWatch, EC2 Auto Scaling, RDS monitoring"
requires-python = ">=3.11"
license = { text = "BSL-1.1" }
dependencies = ["axonops-sdk>=1.0.0", "boto3>=1.34"]

[project.entry-points."axonops.collectors"]
aws = "axonops_plugin_aws:AWSCollector"

[project.entry-points."axonops.actions"]
aws = "axonops_plugin_aws:AWSAction"

[project.entry-points."axonops.strategies"]
aws = "axonops_plugin_aws:AWSStrategy"

[tool.hatch.build.targets.wheel]
packages = ["axonops_plugin_aws"]
