[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axonops-plugin-psutil"
version = "1.0.0"
description = "AxonOps plugin — local machine monitoring via psutil"
requires-python = ">=3.11"
license = { text = "BSL-1.1" }
dependencies = ["axonops-sdk>=1.0.0", "psutil>=5.9"]

[project.entry-points."axonops.collectors"]
psutil = "axonops_plugin_psutil.collector:PsutilCollector"

[project.entry-points."axonops.actions"]
psutil = "axonops_plugin_psutil.action:PsutilAction"

[project.entry-points."axonops.strategies"]
psutil = "axonops_plugin_psutil.strategy:PsutilStrategy"

[tool.hatch.build.targets.wheel]
packages = ["axonops_plugin_psutil"]
